Beginning implementation of excel handling.

--- a/ArcherTools_0.0.1/ArcherTools_0.0.1.csproj
+++ b/ArcherTools_0.0.1/ArcherTools_0.0.1.csproj
@@ -13,9 +13,10 @@
     <PackageReference Include="Emgu.CV" Version="4.9.0.5494" />
     <PackageReference Include="Emgu.CV.Bitmap" Version="4.9.0.5494" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.9.0.5494" />
+    <PackageReference Include="EPPlus" Version="7.5.2" />
     <PackageReference Include="libpng_static" Version="1.6.39.1" />
     <PackageReference Include="NPOI" Version="2.7.2" />
-    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
